refactor entity modell and logic